--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-        <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+        <meta http-equiv="refresh" content="0; url=https://simonhlee97.github.io/han-flashy/index.html">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://unpkg.com/simplesimoncss" />
